将事件的conditions和active_conditions类型彻底拆分，改成两套不同的注册类型。